--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   },
   "devDependencies": {
     "codecov": "^3.0.0",
-    "lerna": "^2.5.1"
+    "lerna": "^3.22.1"
   },
   "keywords": [
     "gatsby",
     "gatsby-plugin"
   ],
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
